[workspace]
resolver = "2"
members = [
    "smap-core",
    "smap-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Smap Contributors"]
repository = "https://github.com/s0md3v/smap"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Networking
cidr = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
futures = "0.3"

# Lazy static initialization
once_cell = "1.19"

# Domain validation
publicsuffix = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
criterion = "0.8.2"
